fixed: z-index nav

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ a {
     left: 0;
     background-color: var(--header-nav-bg-color);
     padding: 1rem 0;
+    z-index: 9999;
 }
 
 .logo,
@@ -435,6 +436,7 @@ input[type="radio"]:checked {
 
 .logo-container>img {
     filter: brightness(0) invert(1);
+    z-index: 1;
 }
 
 .center-logo-section {
